# Blog-fastapi-todo

./: README.md  migrate_db.sh  pyproject.toml
app/: db.py  main.py  settings.py
app/cruds/: task.py
app/migrations/: env.py
app/models/: task.py
app/routers/: task.py
app/tests/: conftest.py  test_task.py
tests/: conftest.py  test_main.py
